IndexedDB: database file of subframe cannot be removed https://bugs.webkit.org/show_bug.cgi?id=187564

Reviewed by Youenn Fablet.

Source/WebCore:

For IndexedDB, if openingOrigin is different from mainFrameOrigin, there will be another
layer in the database file path.
IDBServer should delete database files recursively to make sure all files are removed.

Covered by modified test: WebKit.WebsiteDataStoreCustomPaths.

* Modules/indexeddb/server/IDBServer.cpp:
(WebCore::IDBServer::removeAllDatabasesForOriginPath):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:
(TEST):


Canonical link: https://commits.webkit.org/202828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233777 268f45cc-cd09-0410-ab3c-d52691b4dbfc